@@ -3,8 +3,9 @@ bubba-frontend (2.1.4) lucid; urgency=low
   * Initial work on multiple language support
   * Possibility to add user defined languages. 
   * Select default language in first wizard page. 
+  * Moved language selection to seperate wizard page. 
 
- -- PA Nilsson <pa@excito.com>  Mon, 27 Sep 2010 16:04:12 +0200
+ -- PA Nilsson <pa@excito.com>  Tue, 28 Sep 2010 13:28:21 +0200
 
 bubba-frontend (2.1.3) vincent hugo; urgency=low
 
